# cpe

./: .gitignore  Makefile  README.md  all_cluster_visualization.py  bpe_tokenizer.py  config.py  dataset.py  embedding.ipynb  main_llm.py  main_llm_refactored.py  main_llm_v2.py  model_visualization_tSNE.py  pyvenv.cfg  setup.cfg  setup.py  utils.py
architectures/: bert_330m.json  neox_3m.json
architectures/neox/: neox_330m.json
bpe_llm_out/: train_config.yaml
cpe/: all_cluster_visualization.py  ape_tokenizer_experiment.json  bpe_tokenizer.py  config.py  create_tokenizer_bpe.py  dataset.py  determining_tokenizer.ipynb  hf-cBPE-tokenizer-abrace.ipynb  main_llm.py  mdh_genslm_embedding.ipynb  model_visualization_tSNE.ipynb  model_visualization_tSNE.py  new_appa_testing_vocab.ipynb  s4pred.ipynb  save_embeddings.py  seq_pred_finetune.py  testing.py  tracking_a_seq.md  utils.py
cpe/ape_tokenizer_retrained_1500/: tokenizer.json
cpe/bert/: bert_3m.json
cpe/bert_baseline_codon_3m_mdh/: train_config.yaml
cpe/bpe_llm_out/: train_config.yaml
cpe/classificaiton_tasks/: config_main.py  dataset.py  model.py  my_version.py  tokenizer.json  train_config.yaml  train_tokenizer_bert.py  utils.py
cpe/cpe_tokenizer_1000/: tokenizer.json
cpe/cpe_tokenizer_retrained_3000/: tokenizer.json
cpe/finetuning/: sample_config.yaml
cpe/masked_lm/: comparing_two_models.py  dataset.py  main_llm.py  masked_lm_test.ipynb  seq_align_main.py  seq_pred_finetune.py  sequence_alignment.py  testing.ipynb  utils.py
cpe/npe_tokenizer_17/: tokenizer.json
requirements/: requirements.txt
(+334 files in other folders)
