[metadata]
name = cpe
version = attr: cpe.__version__
description = Evaluate tokenizers.
long_description = file:README.md
long_description_content_type=text/markdown

url = https://github.com/braceal/cpe
author = Alexander Brace, Saketh
author_email = abrace@uchicago.edu

[options]
packages = find:
install_requires =
    scikit-learn==1.3.0
    torch

python_requires = >=3.8

[options.packages.find]
exclude =
    tests
    docs

[flake8] 
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
plugins = pydantic.mypy
strict = True
disallow_untyped_defs = True

[mypy-sklearn.*]
ignore_missing_imports = True
